package com.group11.bugreporter.entity;

public enum VoteType {
    UPVOTE,
    DOWNVOTE
}