package com.group11.bugreporter.entity.enums;

public enum BugStatus {
    OPEN, IN_PROGRESS, FIXED, CLOSED
}