package com.group11.bugreporter.entity.enums;


public enum Role{
    USER,
    MODERATOR,
    ADMIN
}